<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonTheme"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:onClick="myRules"
        android:text="@string/my_rules" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonTheme"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:onClick="newRule"
        android:text="@string/new_rule" />

    <Button
        android:id="@+id/button5"
        style="@style/ButtonTheme"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:onClick="share"
        android:text="@string/share" />

    <ImageView
        android:id="@+id/samsung_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/samsung"
        android:src="@drawable/samsung" />

</LinearLayout>